--- a/styles/home.css
+++ b/styles/home.css
@@ -32,6 +32,7 @@ section {
     margin: 32px;
     line-height: 1.5;
     z-index: 1;
+    display: grid;
 }
 
 .text-overlay a {
