--- a/styles/portfolio-sub.css
+++ b/styles/portfolio-sub.css
@@ -51,7 +51,7 @@ section {
 
 .project {
     display: grid;
-    gap: 15px;
+    gap: 16px;
 }
 
 .overlay img {
@@ -149,7 +149,7 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 15px;
+    gap: 16px;
     width: 100%;
 }
 
